@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.7-ptx-master Kernel Configuration
+# Linux/arm 3.0.8-ptx-master Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
