@@ -9,7 +9,7 @@ Index: linux-3.0/Makefile
 @@ -1,7 +1,7 @@
  VERSION = 3
  PATCHLEVEL = 0
- SUBLEVEL = 7
+ SUBLEVEL = 8
 -EXTRAVERSION =
 +EXTRAVERSION = -ptx-master
  NAME = Sneaky Weasel
