@@ -32,7 +32,7 @@ they are also available. Here is a list of currently available Linux kernel
 releases in the \ptxdistBSPName{}:
 
 \begin{itemize}
-	\item \curKernelRev , stable patch level 7 (default)
+	\item \curKernelRev , stable patch level 8 (default)
 	\item 2.6.39, stable patch level 4
 	\item 2.6.38, stable patch level 8
 \end{itemize}
